--- a/404.md
+++ b/404.md
@@ -5,13 +5,30 @@ eleventyExcludeFromCollections: true
 ---
 # Content not found.
 
-Go <a href="{{ '/' | url }}">home</a>.
-
-{% comment %}
-Read more: https://www.11ty.dev/docs/quicktips/not-found/
-
-This will work for both GitHub pages and Netlify:
-
-* https://help.github.com/articles/creating-a-custom-404-page-for-your-github-pages-site/
-* https://www.netlify.com/docs/redirects/#custom-404
-{% endcomment %}
+ <div id="page-wrapper">
+         <!-- ==== Page Content ==== -->
+         <div class="page" style="padding-top:30px">
+            <div class="container" id="not-found">
+               <div class="row text-lg-left text-center">
+                  <!-- content -->
+                  <div class="col-lg-5 offset-lg-2" data-aos="zoom-in">
+                     <!-- image -->
+                     <img src="{{'/img/404.png' | url}}" class="img-fluid" alt="">
+                  </div>
+                  <!-- /col-lg -->
+                  <div class="col-lg-5" data-aos="fade-down">
+                     <h1>404</h1>
+                     <span>Bak şu aksiliğe, <br> Aradığınız sayfayı bulamadık..</span>
+                     <div class="text-lg-left">
+                        <!-- button -->
+                        <a href="/" class="btn btn-secondary btn-sm mt-4">Anasayfaya Dön</a>
+                     </div>
+                  </div>
+                  <!-- /col-lg -->
+               </div>
+               <!-- /.row -->
+            </div>
+            <!-- /.container -->
+         </div>
+         <!-- /page -->
+      </div>
